--- a/modpack/mods/fabric-api.pw.toml
+++ b/modpack/mods/fabric-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.81.1+1.19.4.jar"
+filename = "fabric-api-0.84.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/qMk5NmAs/fabric-api-0.81.1%2B1.19.4.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/FLGCXPFi/fabric-api-0.84.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "15af0813d0522c2137bb4ed2cc46603843bc7169"
+hash = "b6df5dd417d08cfd8565e1ce1a8c1f39219c67fe"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "qMk5NmAs"
+version = "FLGCXPFi"
