--- a/modpack/mods/yacl.pw.toml
+++ b/modpack/mods/yacl.pw.toml
@@ -1,13 +1,13 @@
 name = "YetAnotherConfigLib"
-filename = "yet-another-config-lib-fabric-2.5.1+1.19.4.jar"
+filename = "yet-another-config-lib-fabric-3.0.2+1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/M5iKxVFU/yet-another-config-lib-fabric-2.5.1%2B1.19.4.jar"
+url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/zJ1Wh6pM/yet-another-config-lib-fabric-3.0.2%2B1.20.jar"
 hash-format = "sha1"
-hash = "3a693d9ff4afdc08f17f34665c562eebe847884e"
+hash = "c1c8904d658393871840d19871238416793f661b"
 
 [update]
 [update.modrinth]
 mod-id = "1eAoo2KR"
-version = "M5iKxVFU"
+version = "zJ1Wh6pM"
